fixed front page

--- a/docs/Deckblatt.tex
+++ b/docs/Deckblatt.tex
@@ -22,12 +22,12 @@
 	Projekt:       & \quad \projektName \\[1.2ex]
   \end{tabular}
 
-\begin{tabular}{|p{3 cm}|p{3 cm}|p{5 cm}|}
+\begin{tabularx}{\textwidth}{|l|l|X|}
 \hline
 \textbf{Version} & \textbf{Datum} & \textbf{Autor(en)} \\
 \hline
 \hline
 1.0 & 19.09.2016 & \authorName \\
 \hline
-\end{tabular}
+\end{tabularx}
 \end{titlepage}
