--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -6,6 +6,7 @@
 \usepackage[T1]{fontenc}    % this is needed for correct output of umlauts in pdf
 \usepackage[margin=2.5cm]{geometry} %layout
 \usepackage{booktabs}
+\usepackage{tabularx}
 
 % this is needed for forms and links within the text
 \usepackage{hyperref}
@@ -23,11 +24,10 @@
 % Variablen                                 						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\authorName}{Dustin Spallek, Rene Kretschmer, Christof Rode, Jana Wengenroth, Malte Scheller, Daniel Schruhl}
-\newcommand{\projektName}{Microservices mit Angular}
-\newcommand{\tags}{\authorName, Lastenheft}
-\newcommand{\glossarName}{Glossar}
+\newcommand{\projektName}{Anbieter Informations Management}
+\newcommand{\tags}{\authorName, Pflichtenheft}
 \title{\projektName~(Pflichtenheft)}
-\author{\authorName}
+\author{Dustin Spallek, Rene Kretschmer, Christof Rode, Jana Wengenroth, \\Malte Scheller, Daniel Schruhl}
 \date{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
