minor change, added no information to empty sections

--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -156,6 +156,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Erweiterung}\label{erweiterung}
+Keine weiteren Angaben.
 
 \subsubsection{Abgrenzung}\label{abgrenzung}
 
@@ -203,8 +204,10 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-1}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung}
+Keine weiteren Angaben.
 
 \subsubsection{Abgrenzung}\label{abgrenzung}
 
@@ -413,6 +416,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-4}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung-4}
 
@@ -484,6 +488,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-5}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung-5}
 
@@ -553,6 +558,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-6}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung-6}
 
@@ -619,6 +625,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-7}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung-7}
 
@@ -842,6 +849,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Fehlerfälle}\label{fehlerfalle-10}
+Keine weiteren Angaben.
 
 \subsubsection{Erweiterung}\label{erweiterung-10}
 
@@ -929,8 +937,10 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Erweiterung}\label{erweiterung-11}
+Keine weiteren Angaben.
 
 \subsubsection{Abgrenzung}\label{abgrenzung-11}
+Keine weiteren Angaben.
 
 \subsection{Dateien ersetzen / Produkt-/Kunden- Bilder/PDFs}\label{dateien-ersetzen-produkt-kunden--bilderpdfs}
 
@@ -999,8 +1009,10 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Erweiterung}\label{erweiterung-12}
+Keine weiteren Angaben.
 
 \subsubsection{Abgrenzung}\label{abgrenzung-12}
+Keine weiteren Angaben.
 
 \subsection{Dateien löschen / Produkt-/Kunden- Bilder/PDFs}\label{dateien-loschen-produkt-kunden--bilderpdfs}
 
@@ -1054,6 +1066,7 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
 \end{itemize}
 
 \subsubsection{Erweiterung}\label{erweiterung-13}
+Keine weiteren Angaben.
 
 \subsubsection{Abgrenzung}\label{abgrenzung-13}
 
